sandc/test/fixtures/astRegression/shouldFail/productions/tryPseudex/EmptyCatchBody.sand
pub class EmptyCatchBody {
    foo() {
        let a = try {
            b
        } catch e: Foo {
            b
        } catch e: Foo {
            
        };
    }
}